--- a/html/macroEditList.html
+++ b/html/macroEditList.html
@@ -64,7 +64,7 @@
     </div>
 </div>
 <br><br><br>
-<?php include './html/footer.html'; ?>
-<script src="./js/macroEditList.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="../js/macroEditList.js"></script>
 </body>
 </html>
