move vue's link to cdn, instead of local file.

--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,8 @@
 
     </div>
 </div>
-<script src="../js/vue.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="../js/index.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
