--- a/html/addMacro.html
+++ b/html/addMacro.html
@@ -60,8 +60,9 @@
     </div>
 </div>
 <br><br>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="../js/vue.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="../js/addMacro.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
