--- a/html/macroIndex.html
+++ b/html/macroIndex.html
@@ -72,7 +72,8 @@
 
 </div>
 <br><br><br>
-<script src="../js/vue.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="../js/macroIndex.js"></script>
 <script src="../js/data.js"></script>
 
