--- a/html/macroList.html
+++ b/html/macroList.html
@@ -92,8 +92,9 @@
     </div>
 </div>
 <br><br><br>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="../js/vue.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="../js/macroList.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
