--- a/html/macroEditList.html
+++ b/html/macroEditList.html
@@ -64,7 +64,7 @@
     </div>
 </div>
 <br><br><br>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="../js/axios.min.js"></script>
 <script src="../js/macroEditList.js"></script>
 </body>
 </html>
