add macro infomation

--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
                 <li role="presentation"><a href="./macroIndex.html">自己组合条件</a></li>
                 <li role="presentation"><a href="./addMacro.html">分享一条宏</a></li>
                 <li role="presentation"><a href="./macroList.html">搜索同伴分享的宏</a></li>
+                <li role="presentation"><a href="./info.html">宏完全指南</a></li>
             </ul>
         </div>
     </div>
