--- a/html/macroIndex.html
+++ b/html/macroIndex.html
@@ -16,6 +16,7 @@
                 <li role="presentation"  class="active"><a href="./macroIndex.html">手动组合条件</a></li>
                 <li role="presentation"><a href="./addMacro.html">分享一条宏</a></li>
                 <li role="presentation"><a href="./macroList.html">搜索同伴分享的宏</a></li>
+                <li role="presentation"><a href="./info.html">宏完全指南</a></li>
             </ul>
         </div>
     </div>
