--- a/html/info.html
+++ b/html/info.html
@@ -31,5 +31,7 @@
         </ul>
     </div>
 </div>
+<script src="../js/axios.min.js"></script>
+<script src="../js/info.js"></script>
 </body>
 </html>
