--- a/html/macroIndex.html
+++ b/html/macroIndex.html
@@ -75,6 +75,7 @@
 <br><br><br>
 <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="../js/axios.min.js"></script>
 <script src="../js/macroIndex.js"></script>
 <script src="../js/data.js"></script>
 
