--- a/html/addMacro.html
+++ b/html/addMacro.html
@@ -5,65 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>宏工具-快速创建</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
+    <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
+    <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
 </head>
 <body>
-<div class="container" id="fast-create">
-    <div class="row">
-        <div class="bs-example" data-example-id="simple-nav-justified">
-            <ul class="nav nav-tabs nav-justified">
-                <li role="presentation"><a href="./index.html">快速创建</a></li>
-                <li role="presentation"><a href="./macroIndex.html">自己组合条件</a></li>
-                <li role="presentation"  class="active"><a href="./addMacro.html">分享一条宏</a></li>
-                <li role="presentation"><a href="./macroList.html">搜索同伴分享的宏</a></li>
-                <li role="presentation"><a href="./info.html">宏完全指南</a></li>
-            </ul>
-        </div>
-    </div>
-    <br>
-    <div class="col-sm-12" id="edit_macro">
-        <form action="../includes/action.php?method=addMacro" method="post" class="col-sm-10" id="addMacroForm">
-            <style>
-                .margin_bottom{margin-bottom: 10px;}
-            </style>
-            <div class="form-group">
-                <label for="profession">选择宏所属职业：</label>
-                <select class="form-control col-xs-12 col-sm-12 col-md-2 margin_bottom" id="profession" name="profession_id" v-model="select_proid" v-on:change="changeProfession" >
-                    <option value="">
-                        请选择
-                    </option>
-                    <option v-for="item in professions" v-bind:value="item.id">
+<div class="container" id="container" flag="addMacro">
+    <script src="../js/header.js"></script>
+    <div class="row" style="margin-top: 70px;" id="content">
+        <div class="col-sm-12" id="edit_macro">
+            <form action="" method="post" class="col-sm-10" id="addMacroForm">
+                <style>
+                    .margin_bottom {
+                        margin-bottom: 10px;
+                    }
+                </style>
+                <div class="form-group">
+                    <label for="profession">选择宏所属职业：</label>
+                    <select class="form-control col-xs-12 col-sm-12 col-md-2 margin_bottom" id="profession" name="profession_id" v-model="select_proid" v-on:change="changeProfession">
+                        <option value="">
+                            请选择
+                        </option>
+                        <option v-for="item in professions" v-bind:value="item.id">
                         {{item.name}}
-                    </option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="title">标题：</label>
-                <input name="title" type="text" class="form-control" id="title" placeholder="请输入宏模板的一小段使用介绍">
-            </div>
-            <div class="form-group">
-                <label for="macro">宏模板：</label>
-                <textarea name="macro" class="form-control" id="macro" placeholder="请将要分享的宏模板粘贴在此处！
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="title">标题：</label>
+                    <input name="title" type="text" class="form-control" id="title" placeholder="请输入宏模板的一小段使用介绍">
+                </div>
+                <div class="form-group">
+                    <label for="macro">宏模板：</label>
+                    <textarea name="macro" class="form-control" id="macro" placeholder="请将要分享的宏模板粘贴在此处！
 比如：
 #showtooltip
 /cast [nostance:1,nostance:3]激活
 /cast [stance:1]野性冲锋(熊形态)
 /castsequence [stance:3] reset=10 野性冲锋(猎豹形态),毁灭
 /script UIErrorsFrame:Clear()" style="min-height: 300px;"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="title">服务器-角色名称：</label>
-                <input name="author" type="text" class="form-control" id="author" placeholder="请输入分享者信息！格式：服务器-角色名称">
-            </div>
-            <button type="button" class="btn btn-success col-sm-12" v-on:click="submitToService">分享一条宏</button>
-        </form>
+                </div>
+                <div class="form-group">
+                    <label for="title">服务器-角色名称：</label>
+                    <input name="author" type="text" class="form-control" id="author" placeholder="请输入分享者信息！格式：服务器-角色名称">
+                </div>
+                <button type="button" class="btn btn-success col-sm-12" v-on:click="submitToService">分享一条宏</button>
+            </form>
+        </div>
     </div>
 </div>
 <br><br>
-<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="../js/axios.min.js"></script>
 <script src="../js/addMacro.js"></script>
 </body>
 </html>
