add createSequence function

--- a/html/header.html
+++ b/html/header.html
@@ -16,6 +16,7 @@
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li id="index"><a href="./index.html">快速创建</a></li>
+                    <li id="createSequence"><a href="./createSequence.html">创建技能循环</a></li>
                     <li id="macroIndex"><a href="./macroIndex.html">手动组合</a></li>
                     <li id="addMacro"><a href="./addMacro.html">分享Your宏</a></li>
                     <li id="macroList"><a href="./macroList.html">搜索</a></li>
