--- a/html/macroEditList.html
+++ b/html/macroEditList.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
 </head>
 <body>
-<div class="container" id="edit">
+<div class="container" id="content">
     <br><br>
     <div class="form-group col-sm-12 clearfix">
         <select class="form-control col-xs-12 col-sm-12 col-md-2 col-lg-2" id="profession" name="profession_id">
