合并部分文件

--- a/html/header.html
+++ b/html/header.html
@@ -4,7 +4,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" onclick="toggle()">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">Toggle</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -15,12 +15,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li id="index"><a href="./index.html">快速创建</a></li>
-                    <li id="createSequence"><a href="./createSequence.html">创建技能循环</a></li>
-                    <li id="macroIndex"><a href="./macroIndex.html">手动组合</a></li>
-                    <li id="addMacro"><a href="./addMacro.html">分享Your宏</a></li>
-                    <li id="macroList"><a href="./macroList.html">搜索</a></li>
-                    <li id="info"><a href="./info.html">宏指南</a></li>
+                    <li id="index"><a href="./index.html" style="color: #3c763d;">快速创建</a></li>
+                    <li id="createSequence"><a href="./createSequence.html" style="color: #3c763d;">创建技能循环</a></li>
+                    <li id="macroIndex"><a href="./macroIndex.html" style="color: #3c763d;">手动组合</a></li>
+                    <li id="addMacro"><a href="./addMacro.html" style="color: #3c763d;">分享Your宏</a></li>
+                    <li id="macroList"><a href="./macroList.html" style="color: #3c763d;">搜索</a></li>
+                    <li id="info"><a href="./info.html" style="color: #3c763d;">宏指南</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
