--- a/html/addMacro.html
+++ b/html/addMacro.html
@@ -3,15 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>宏工具-快速创建</title>
+    <title>宏工具-分享</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
-    <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
-    <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container" id="container" flag="addMacro">
-    <script src="../js/header.js"></script>
+    <div class="row" id="header">
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" onclick="toggle()">
+                        <span class="sr-only">Toggle</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="./index.html" style="color: #3c763d;">Macro</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li id="index"><a href="./index.html" style="color: #3c763d;">快速创建</a></li>
+                        <li id="createSequence"><a href="./createSequence.html" style="color: #3c763d;">创建技能循环</a></li>
+                        <li id="macroIndex"><a href="./macroIndex.html" style="color: #3c763d;">手动组合</a></li>
+                        <li id="addMacro" class="active"><a href="./addMacro.html" style="color: #3c763d;">分享Your宏</a></li>
+                        <li id="macroList"><a href="./macroList.html" style="color: #3c763d;">搜索</a></li>
+                        <li id="info"><a href="./info.html" style="color: #3c763d;">宏指南</a></li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+    </div>
     <div class="row" style="margin-top: 70px;" id="content">
         <div class="col-sm-12" id="edit_macro">
             <form action="" method="post" class="col-sm-10" id="addMacroForm">
@@ -55,6 +82,98 @@
     </div>
 </div>
 <br><br>
-<script src="../js/addMacro.js"></script>
+<script>
+    function toggle() {
+        let flag = document.getElementById("navbar-collapse-1").style.display;
+        if (flag === "block") {
+            document.getElementById("navbar-collapse-1").style.display = "none";
+        } else {
+            document.getElementById("navbar-collapse-1").style.display = "block";
+        }
+    }
+    let vue = new Vue({
+        el: "#container",
+        data: {
+            professions: [
+                {'id': 1, 'name': '猎人'},
+                {'id': 10, 'name': '德鲁伊'},
+                {'id': 20, 'name': '死亡骑士'},
+                {'id': 30, 'name': '法师'},
+                {'id': 40, 'name': '圣骑士'},
+                {'id': 50, 'name': '牧师'},
+                {'id': 60, 'name': '盗贼'},
+                {'id': 70, 'name': '萨满祭司'},
+                {'id': 80, 'name': '术士'},
+                {'id': 90, 'name': '战士'},
+                {'id': 100, 'name': '武僧'},
+                {'id': 110, 'name': '恶魔猎手'},
+                {'id': 120, 'name': '其他'},
+            ],
+            select_proid: '',
+            select_pro: [],
+            select_mastery: [],
+        },
+        methods: {
+            changeProfession: function() {
+                let len = vue.$data.professions.length;
+                // console.log(len);
+                if (len <= 0) {
+                    return false;
+                }
+                for (let i = 0; i < len; i++) {
+                    if (vue.$data.select_proid === vue.$data.professions[i].id) {
+                        vue.$data.select_pro = vue.$data.professions[i];
+                        // this.select_mastery = this.select_pro.child;
+                    }
+                }
+            },
+            submitToService: function() {
+                let pid = document.getElementById("profession").value;
+                if (!pid) {
+                    alert('职业不能为空！');
+                    return false;
+                }
+                let title = document.getElementById("title").value;
+                let macro = document.getElementById("macro").value;
+                if (!title || !macro) {
+                    alert('标题或宏模板不能为空！');
+                    return false;
+                }
+
+                let author = document.getElementById("author").value;
+                if (!author) {
+                    alert('请留下你的艾泽拉斯名称，分享者必将被铭记！');
+                    return false;
+                }
+                axios.post('/macros', {
+                    professionId: parseInt(pid),
+                    title: title,
+                    author: author,
+                    macro: macro,
+                })
+                        .then(function(response) {
+                            // console.log(response);
+                            document.getElementById("title").value = "";
+                            document.getElementById("macro").value = "";
+                        });
+            }
+        },
+        computed: {
+            select_mastery: function() {
+                if (vue.$data.select_pro) {
+                    return vue.$data.select_pro.child;
+                }
+                return [];
+            }
+        },
+        created: function() {
+            axios.post('/log/addMacro', {
+            })
+                    .then(function(response) {
+                        // console.log(response);
+                    });
+        }
+    });
+</script>
 </body>
 </html>
