--- a/html/macroEditList.html
+++ b/html/macroEditList.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>宏工具-编辑</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<script src="../js/vue.min.js" crossorigin="anonymous"></script>
+	<script src="../js/axios.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container" id="content">
