--- a/html/info.html
+++ b/html/info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>宏工具-资料指南</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<script src="../js/axios.min.js" crossorigin="anonymous"></script>
+	<script src="../js/axios.min.js" ></script>
 </head>
 <body>
 <div class="container" id="container" flag="info">
