--- a/html/macroIndex.html
+++ b/html/macroIndex.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>宏工具-手动组合</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<script src="../js/vue.min.js" crossorigin="anonymous"></script>
-	<script src="../js/axios.min.js" crossorigin="anonymous"></script>
+	<script src="../js/vue.min.js" ></script>
+	<script src="../js/axios.min.js" ></script>
 </head>
 <body>
 <div class="container" id="container" flag="macroIndex">
