--- a/html/info.html
+++ b/html/info.html
@@ -51,8 +51,42 @@
             <a href="https://bbs.nga.cn/read.php?tid=1599813">
                 <li class="list-group-item text-success">[译制的剩菜] 北美官网推荐教程：《宏命令完全指南》</li>
             </a>
-        </ul>
+			<a href="https://wow.gamepedia.com/World_of_Warcraft_API#Location_Functions">
+				<li class="list-group-item text-danger">World of Warcraft API（国外）</li>
+			</a>
+			<a href="https://wow.gamepedia.com/Macro_commands">
+				<li class="list-group-item text-danger">Macro commands（国外）</li>
+			</a>
+		</ul>
     </div>
+	<div class="row" style="margin-top: 70px;" id="content">
+		<h3>楼主自己开发的PVP插件：</h3>
+		<ul class="list-group">
+			<a href="https://bbs.nga.cn/read.php?tid=15477121">
+				<li class="list-group-item text-success">PVPInfo -- 显示玩家PVP数据插件</li>
+			</a>
+		</ul>
+	</div>
+	<div class="row" style="margin-top: 70px;" id="content">
+		<h3>后续计划：</h3>
+		<ul class="list-group">
+			<a href="https://wow.gamepedia.com/World_of_Warcraft_API#Location_Functions">
+				<li class="list-group-item text-success">整合World of Warcraft API(魔兽世>界API)，并加入网站，添加使用实例，方便玩家查看、开发自己的插件</li>
+			</a>
+			<a href="https://wow.gamepedia.com/Macro_commands">
+				<li class="list-group-item text-success">翻译Macro commands（宏命令），并>更新本网站宏数据</li>
+			</a>
+			<a href="">
+				<li class="list-group-item text-success">改版网站，加入插件模块开发，类似>宏制作工具，即使不懂插件开发的玩家，也能开发属于自己的魔兽世界插件！</li>
+			</a>
+		</ul>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<h4>交流群：</h4>
+			<img src="http://file.battlenet.top/qun.png" style="width: 300px;height: 500px;">
+		</div>
+	</div>
 </div>
 <script>
     function toggle() {
