--- a/html/info.html
+++ b/html/info.html
@@ -83,8 +83,8 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<h4>交流群：</h4>
-			<img src="http://file.battlenet.top/qun.png" style="width: 300px;height: 500px;">
+			<h4>qq交流群：923174332</h4>
+			<h4>微信群：待续</h4>
 		</div>
 	</div>
 </div>
